# tracklistify

./: .env.example  .gitignore  README.md  pyproject.toml
mixesdbsync/: __init__.py  __main__.py  cli.py  config.py
mixesdbsync/matcher/: __init__.py  normalizer.py  scorer.py  strategy.py
mixesdbsync/mixesdb/: __init__.py  client.py  models.py  parser.py
mixesdbsync/spotify/: __init__.py  client.py  models.py
mixesdbsync/sync/: __init__.py  engine.py
