[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixesdbsync"
version = "0.1.0"
description = "Sync DJ set tracklists from MixesDB to Spotify playlists"
requires-python = ">=3.11"
dependencies = [
    "spotipy>=2.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "rapidfuzz>=3.6.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
mixesdbsync = "mixesdbsync.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
